--- a/assets/css/extended/blank.css
+++ b/assets/css/extended/blank.css
@@ -3,3 +3,9 @@ This is just a placeholder blank stylesheet so as to support adding custom style
 
 Read https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#bundling-custom-css-with-themes-assets for more info
 */
+
+figure.big-picture {
+    width: 99vw;
+    position: relative;
+    left: calc(-50vw + 50%);
+}
