added post description in list view

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -56,6 +56,7 @@
       {{- .Title }}
       {{- if .Draft }}<sup><span class="entry-isdraft">&nbsp;&nbsp;[draft]</span></sup>{{- end }}
     </h2>
+    <p>{{ .Description }}</p>
   </header>
   {{- if (ne (.Param "hideSummary") true) }}
   <section class="entry-content">
